tests/type-errors/expr_control_match_option_non_homogeneous.arl
archetype expr_control_match_option_non_homogeneous

variable res : nat = 0

entry exec() {
  var o : option<nat> = some(3);
  res := match o with | some v | none -> 0 end
}
